{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 429,
  "lineage": "467603b8-1c3a-f4d1-465e-586a7534da7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc679a300e6233b1",
            "domain": "vpc",
            "id": "eipalloc-0bc679a300e6233b1",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-50-18-173-242.us-west-1.compute.amazonaws.com",
            "public_ip": "50.18.173.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pen_pulse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf4e1fcfd8494d5b",
            "arn": "arn:aws:ec2:us-west-1:816069160044:instance/i-087dd65531d4833e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087dd65531d4833e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d4a96551eb984f0",
            "private_dns": "ip-10-0-1-210.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-13-52-242-117.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.242.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-090b14c317ab4a8c2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f20a10bcf3f95dbd",
            "tags": {
              "name": "penpulse front end"
            },
            "tags_all": {
              "name": "penpulse front end"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086ba43d32c401ba1"
            ]
          },
          "dependencies": [
            "aws_security_group.pen_pulse",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:internet-gateway/igw-01dbfb3fc8002c606",
            "id": "igw-01dbfb3fc8002c606",
            "owner_id": "816069160044",
            "tags": {
              "name": "prod-igw"
            },
            "tags_all": {
              "name": "prod-igw"
            },
            "vpc_id": "vpc-0d3df8591c5997cb0"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc679a300e6233b1",
            "association_id": "eipassoc-0ec45ec63935c20ac",
            "connectivity_type": "public",
            "id": "nat-01083cd2c847f1c0c",
            "network_interface_id": "eni-04292f79347f754f2",
            "private_ip": "10.0.1.200",
            "public_ip": "50.18.173.242",
            "subnet_id": "subnet-0f20a10bcf3f95dbd",
            "tags": {
              "name": "VPC NAT"
            },
            "tags_all": {
              "name": "VPC NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat-gateway",
            "aws_internet_gateway.prod-igw",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod-private-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00048404358c63b771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01083cd2c847f1c0c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00048404358c63b77",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-gateway",
            "aws_internet_gateway.prod-igw",
            "aws_nat_gateway.prod-nat-gateway",
            "aws_route_table.prod_private-crt",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod-public-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01dbfb3fc8002c606",
            "id": "r-rtb-0aff3ef726279a5091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aff3ef726279a509",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod_public-crt",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_private-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:route-table/rtb-00048404358c63b77",
            "id": "rtb-00048404358c63b77",
            "owner_id": "816069160044",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "prod-private-crt"
            },
            "tags_all": {
              "name": "prod-private-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3df8591c5997cb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:route-table/rtb-0aff3ef726279a509",
            "id": "rtb-0aff3ef726279a509",
            "owner_id": "816069160044",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "prod-public-crt"
            },
            "tags_all": {
              "name": "prod-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3df8591c5997cb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0247b52221a34c73f",
            "route_table_id": "rtb-00048404358c63b77",
            "subnet_id": "subnet-00b8e9dd0ac410fb4"
          },
          "dependencies": [
            "aws_route_table.prod_private-crt",
            "aws_subnet.prod-subnet-private-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c649b27fca21f0e",
            "route_table_id": "rtb-00048404358c63b77",
            "subnet_id": "subnet-044ac233cc65816ea"
          },
          "dependencies": [
            "aws_route_table.prod_private-crt",
            "aws_subnet.prod-subnet-private-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b4c072ddb3b4ab3",
            "route_table_id": "rtb-0aff3ef726279a509",
            "subnet_id": "subnet-0f20a10bcf3f95dbd"
          },
          "dependencies": [
            "aws_route_table.prod_public-crt",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pen_pulse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:security-group/sg-086ba43d32c401ba1",
            "description": "Allow http ssh in. Allow everthing out",
            "egress": [],
            "id": "sg-086ba43d32c401ba1",
            "ingress": [],
            "name": "pen_pulse",
            "name_prefix": "",
            "owner_id": "816069160044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3df8591c5997cb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pen_pulse_everything_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4090192588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-086ba43d32c401ba1",
            "security_group_rule_id": "sgr-00e858befc2cf5611",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pen_pulse",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pen_pulse_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3193474933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086ba43d32c401ba1",
            "security_group_rule_id": "sgr-0940e94a3eb3f29a1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pen_pulse",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pen_pulse_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-148034240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086ba43d32c401ba1",
            "security_group_rule_id": "sgr-0753b15dd57ae1a03",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pen_pulse",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:subnet/subnet-00b8e9dd0ac410fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b8e9dd0ac410fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069160044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "prod-subnet-private-1"
            },
            "tags_all": {
              "name": "prod-subnet-private-1"
            },
            "vpc_id": "vpc-0d3df8591c5997cb0"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:subnet/subnet-044ac233cc65816ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044ac233cc65816ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069160044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "prod-subnet-private-2"
            },
            "tags_all": {
              "name": "prod-subnet-private-2"
            },
            "vpc_id": "vpc-0d3df8591c5997cb0"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:subnet/subnet-0f20a10bcf3f95dbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f20a10bcf3f95dbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069160044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "prod-subnet-public"
            },
            "tags_all": {
              "name": "prod-subnet-public"
            },
            "vpc_id": "vpc-0d3df8591c5997cb0"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:816069160044:vpc/vpc-0d3df8591c5997cb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fed54b0db5d2b1a2",
            "default_route_table_id": "rtb-099803da5d91988d1",
            "default_security_group_id": "sg-08b2df50bd7e7297c",
            "dhcp_options_id": "dopt-0169352908434cd83",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3df8591c5997cb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099803da5d91988d1",
            "owner_id": "816069160044",
            "tags": {
              "name": "prod_vpc"
            },
            "tags_all": {
              "name": "prod_vpc"
            }
          }
        }
      ]
    }
  ]
}